tests/baselines/reference/declarationEmitLateBoundAssignments2.errors.txt
declarationEmitLateBoundAssignments2.ts(13,1): error TS7022: 'decl2[c]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(19,1): error TS7022: 'decl4[num]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(25,1): error TS7022: 'decl6[numStr]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(31,1): error TS7022: 'decl8[withWhitespace]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(37,1): error TS7022: 'decl10[emoji]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(43,1): error TS7022: 'arrow2[c]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(49,1): error TS7022: 'arrow4[num]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(55,1): error TS7022: 'arrow6[numStr]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(61,1): error TS7022: 'arrow8[withWhitespace]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
declarationEmitLateBoundAssignments2.ts(67,1): error TS7022: 'arrow10[emoji]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== declarationEmitLateBoundAssignments2.ts (10 errors) ====
    // https://github.com/microsoft/TypeScript/issues/54811
    
    const c = "C"
    const num = 1
    const numStr = "10"
    const withWhitespace = "foo bar"
    const emoji = "ðŸ¤·â€â™‚ï¸"
    
    export function decl() {}
    decl["B"] = 'foo'
    
    export function decl2() {}
    decl2[c] = 0
    ~~~~~~~~~~~~
!!! error TS7022: 'decl2[c]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export function decl3() {}
    decl3[77] = 0
    
    export function decl4() {}
    decl4[num] = 0
    ~~~~~~~~~~~~~~
!!! error TS7022: 'decl4[num]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export function decl5() {}
    decl5["101"] = 0
    
    export function decl6() {}
    decl6[numStr] = 0
    ~~~~~~~~~~~~~~~~~
!!! error TS7022: 'decl6[numStr]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export function decl7() {}
    decl7["qwe rty"] = 0
    
    export function decl8() {}
    decl8[withWhitespace] = 0
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'decl8[withWhitespace]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export function decl9() {}
    decl9["ðŸ¤ª"] = 0
    
    export function decl10() {}
    decl10[emoji] = 0
    ~~~~~~~~~~~~~~~~~
!!! error TS7022: 'decl10[emoji]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export const arrow = () => {}
    arrow["B"] = 'bar'
    
    export const arrow2 = () => {}
    arrow2[c] = 100
    ~~~~~~~~~~~~~~~
!!! error TS7022: 'arrow2[c]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export const arrow3 = () => {}
    arrow3[77] = 0
    
    export const arrow4 = () => {}
    arrow4[num] = 0
    ~~~~~~~~~~~~~~~
!!! error TS7022: 'arrow4[num]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export const arrow5 = () => {}
    arrow5["101"] = 0
    
    export const arrow6 = () => {}
    arrow6[numStr] = 0
    ~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'arrow6[numStr]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export const arrow7 = () => {}
    arrow7["qwe rty"] = 0
    
    export const arrow8 = () => {}
    arrow8[withWhitespace] = 0
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'arrow8[withWhitespace]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    export const arrow9 = () => {}
    arrow9["ðŸ¤ª"] = 0
    
    export const arrow10 = () => {}
    arrow10[emoji] = 0
    ~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'arrow10[emoji]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    